--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "devDependencies": {},
   "scripts": {},
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "houndify": "file:houndify-0.4.0.tgz",
+    "morgan": "^1.7.0",
+    "twitter": "^1.3.0"
   }
 }
